# oedatarep-invenio-rdm

./: .gitignore  .invenio  Dockerfile  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg
site/: .gitkeep  setup.cfg
site/oedatarep_invenio_rdm/: views.py  webpack.py
site/oedatarep_invenio_rdm/assets/semantic-ui/js/oedatarep_invenio_rdm/components/: CustomComponents.js  LocationsMapPreview.js  TSPlotly.js
site/oedatarep_invenio_rdm/assets/semantic-ui/js/oedatarep_invenio_rdm/landing_page/: LeafletIcons.js  LeafletLocations.js  Plotly.js  index.js
site/oedatarep_invenio_rdm/assets/semantic-ui/less/site/elements/: button.variables
site/oedatarep_invenio_rdm/assets/semantic-ui/less/site/globals/: site.overrides  site.variables
site/oedatarep_invenio_rdm/assets/semantic-ui/less/site/theme/: theme.less
site/oedatarep_invenio_rdm/search/: search.py
site/oedatarep_invenio_rdm/services/custom_fields/: timeseries.py
site/oedatarep_invenio_rdm/support/: support.py
site/oedatarep_invenio_rdm/templates/: ts.html
site/oedatarep_invenio_rdm/templates/semantic-ui/oedatarep_invenio_rdm/: footer.html  frontpage.html  header.html  header_login.html  support.html
site/oedatarep_invenio_rdm/templates/semantic-ui/oedatarep_invenio_rdm/records/: detail.html
site/oedatarep_invenio_rdm/templates/semantic-ui/oedatarep_invenio_rdm/records/details/: chart.html  locations.html
site/oedatarep_invenio_rdm/templates/semantic-ui/oedatarep_invenio_rdm/records/details/side_bar/: cover.html  details.html  maps.html  timeseries_resources.html
(+19 files in other folders)
