
[metadata]
name = oedatarep-invenio-rdm

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    oedatarep_invenio_rdm_views = oedatarep_invenio_rdm.views:create_blueprint
invenio_assets.webpack =
    oedatarep_invenio_rdm_theme = oedatarep_invenio_rdm.webpack:theme
